--- a/src/app.css
+++ b/src/app.css
@@ -12,12 +12,72 @@ html{
 
 #velocity-label, #velocity-range, #velocity-number{
     display:inline-block;
+    margin:5px;
 }
 
-#velocity-label{
-    text-align: right;
+#velocity-label, #velocity-number{
+    text-align: center;
+    color:white;
+    font-size: medium;
+    font-weight: bold;
+}
+#velocity-number{
+    width:50px;
+    background: grey;
+    border-radius: 2px;
+    border-width: 1px;
 }
 
 #velocity-control{
     text-align: center;
+}
+
+#velocity-range {
+  -webkit-appearance: none;
+  margin-bottom:0;
+}
+#velocity-range:focus {
+  outline: none;
+}
+#velocity-range::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 2px 2px white;
+  background:   lightgrey;;
+  border-radius: 15px;
+
+}
+#velocity-range::-webkit-slider-thumb {
+  box-shadow: 0px 0px 2px 2px grey;
+  border: 1px solid white;
+  height: 15px;
+  width: 15px;
+  border-radius: 25px;
+  background: lightgrey;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -4px;
+}
+
+#velocity-range::-moz-range-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 5px white;
+  background: lightgrey;
+  border-radius: 3px;
+   
+}
+#velocity-range::-moz-range-thumb {
+  box-shadow: 0px 0px 0px white;
+  border: 1px solid white;
+  height: 10px;
+  width: 10px;
+  border-radius: 25px;
+  background: lightgrey;
+  cursor: pointer;
+
 }
